--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,9 @@ jobs:
         uses: actions/checkout@v4
       # Step 2: Fetch commit details for the provided tag
       # Step 2: Fetch commit details for the provided tag
+      # Debug Step: Print the environment directly
+      - name: Print job environment
+        run: echo "Job Environment:${{ job.environment }}"
       - name: Fetch commit details associated with tag
         id: fetch_commit
         run: |
