--- a/.github/workflows/dispatch-env.yml
+++ b/.github/workflows/dispatch-env.yml
@@ -15,9 +15,21 @@ permissions:
   issues: write
   pull-requests: write
 jobs:
+
+  get-env-data:
+    environment : ${{inputs.environments}}
+    runs-on: ubuntu-latest
+    outputs:
+      my-output: ${{ steps.step1.outputs.sql }}
+    steps:
+      - name: Get value
+        id: step1
+        run: |
+          echo "sql =${{vars.S3_MYSQ}}" > GITHUB_OUTPUT
+        
   call-deploy:
     uses: ./.github/workflows/env-test-call.yml
     secrets: inherit
     with:
-      s3_bucket: ${{vars.S3_MYSQL}}
+      s3_bucket: ${{needs.get-env-data.outputs.my-output}}
       environment: ${{inputs.environment}}
