--- a/.github/workflows/dispatch-env.yml
+++ b/.github/workflows/dispatch-env.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get value
         id: step1
         run: |
-          echo "sql=${{vars.S3_MYSQ}}" > GITHUB_OUTPUT
+          echo "sql=${{vars.S3_MYSQL}}" > GITHUB_OUTPUT
         
   call-deploy:
     needs: [get-env-data]
